--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper WBS  
+  uni: Btcity
+  year: Nov, 2012 &mdash; January, 2018
   # awards:
-  # summary:
+  summary: alsd flasjd lfjalsdjf ljsk 
